--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,8 @@ michael:
   name: Micheal Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+
+archer:
+  name: Sterling archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
